updated layout files, working database no longer crashing

--- a/app/src/main/res/layout/dailylog_item.xml
+++ b/app/src/main/res/layout/dailylog_item.xml
@@ -33,7 +33,7 @@
                 android:background="@android:color/transparent"
                 android:fontFamily="casual"
                 android:gravity="center"
-                android:text="date"
+                android:text="@string/date_text"
                 android:textColor="@android:color/holo_blue_dark"
                 android:textSize="20sp"
                 android:textStyle="bold" />
