--- a/app/src/main/res/layout/fragment_daily_log_display.xml
+++ b/app/src/main/res/layout/fragment_daily_log_display.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerta"
-        android:text="Your daily logs"
+        android:text="@string/display_your_daily_logs_text"
         android:textColor="@color/yellow"
         android:textStyle="bold"
         android:textSize="30sp"
@@ -71,7 +71,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_shape"
-        android:text="Check reoccurring behavior"
+        android:text="@string/reoccurring_behavior_bttn_text"
         android:textColor="@color/yellow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
