--- a/app/src/main/res/layout/fragment_day_thought.xml
+++ b/app/src/main/res/layout/fragment_day_thought.xml
@@ -62,7 +62,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="280dp"
         android:layout_marginEnd="8dp"
-        android:text="Why? Enter your thoughts:"
+        android:text="@string/dayThought_enter_thoughts_text"
         android:fontFamily="@font/allerta"
         android:textStyle="bold"
         android:textColor="@color/darkerBlue"
@@ -95,7 +95,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="submit"
+        android:text="@string/submit_button_text"
         android:fontFamily="@font/allerta"
         android:textStyle="bold"
         android:textColor="@color/darkerBlue"
