--- a/app/src/main/res/layout/fragment_feel.xml
+++ b/app/src/main/res/layout/fragment_feel.xml
@@ -61,9 +61,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="288dp"
         android:layout_marginEnd="8dp"
+        android:text="@string/feel_choose_mood_text"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="How do you feel right now?"
         android:textColor="@color/darkerBlue"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="Great"
+        android:text="@string/feel_choose_mood_leftTop_text"
         android:textColor="@color/darkerBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -98,7 +98,7 @@
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="Bad"
+        android:text="@string/feel_choose_mood_leftBottom_text"
         android:textColor="@color/darkerBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="Okay"
+        android:text="@string/feel_choose_mood_rightTop_text"
         android:textColor="@color/darkerBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -130,10 +130,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:text="@string/feel_choose_mood_rightBottom_text"
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="Terrible"
         android:textColor="@color/darkerBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
