--- a/app/src/main/res/layout/fragment_initial.xml
+++ b/app/src/main/res/layout/fragment_initial.xml
@@ -18,7 +18,7 @@
         android:background="@drawable/oval_y_s"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="WellMood"
+        android:text="@string/wellmood_text"
         android:textColor="@color/darkerBlue"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
         android:background="@drawable/btn_shape"
         android:fontFamily="@font/allerta"
         android:padding="10dp"
-        android:text="Add Log"
+        android:text="@string/initial_add_button_text"
         android:textColor="@color/yellow"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -74,7 +74,7 @@
         android:background="@drawable/btn_shape"
         android:fontFamily="@font/allerta"
         android:padding="10dp"
-        android:text="View Logs"
+        android:text="@string/initial_view_button_text"
         android:textColor="@color/yellow"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +94,7 @@
         android:background="@drawable/btn_shape"
         android:fontFamily="@font/allerta"
         android:padding="10dp"
-        android:text="delete logs"
+        android:text="@string/initial_delete_button_text"
         android:textColor="@color/yellow"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
