--- a/app/src/main/res/layout/fragment_mood_cause.xml
+++ b/app/src/main/res/layout/fragment_mood_cause.xml
@@ -61,7 +61,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="264dp"
         android:layout_marginEnd="8dp"
-        android:text="What's causing your mood? Enter your thoughts below:"
+        android:text="@string/moodCause_enter_thoughts_text"
         android:textColor="@color/darkerBlue"
         android:textStyle="bold"
         android:fontFamily="@font/allerta"
@@ -95,7 +95,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="submit"
+        android:text="@string/submit_button_text"
         android:fontFamily="@font/allerta"
         android:textStyle="bold"
         android:textColor="@color/darkerBlue"
