--- a/app/src/main/res/layout/fragment_day_description.xml
+++ b/app/src/main/res/layout/fragment_day_description.xml
@@ -66,7 +66,7 @@
         android:layout_marginTop="240dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/allerta"
-        android:text="How would you describe your day?"
+        android:text="@string/dayDescription_describe_your_day_text"
         android:textColor="@color/darkerBlue"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:layout_height="@dimen/oval_dim"
         android:layout_marginStart="84dp"
         android:layout_marginTop="16dp"
-        android:text="Productive"
+        android:text="@string/dayDescription_leftTop"
         android:background="@drawable/oval"
         android:gravity="center"
         android:fontFamily="@font/allerta"
@@ -97,7 +97,7 @@
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="Exciting"
+        android:text="@string/dayDescription_rightTop"
         android:textColor="@color/darkerBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -112,7 +112,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/oval"
         android:gravity="center"
-        android:text="Unpleasant"
+        android:text="@string/dayDescription_leftMid"
         android:fontFamily="@font/allerta"
         android:textColor="@color/darkerBlue"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +127,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/oval"
         android:gravity="center"
-        android:text="Unfortunate"
+        android:text="@string/dayDescription_rightMid"
         android:fontFamily="@font/allerta"
         android:textColor="@color/darkerBlue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="Delightful"
+        android:text="@string/dayDescription_rightBottom"
         android:textColor="@color/darkerBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -163,7 +163,7 @@
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="Lazy"
+        android:text="@string/dayDescription_leftBottom"
         android:textColor="@color/darkerBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/delightfulTextView"
