layout accounts for orientation change

--- a/app/src/main/res/layout-land/fragment_feel.xml
+++ b/app/src/main/res/layout-land/fragment_feel.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".initialfragments.DayDescriptionFragment">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".initialfragments.FeelFragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/av_xml"
-        android:layout_width="450dp"
-        android:layout_height="300dp"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
         android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.841"
+        app:layout_constraintVertical_bias="0.653"
         app:lottie_autoPlay="true"
         app:lottie_fileName="radar.json"
         app:lottie_loop="true" />
@@ -26,16 +24,16 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/av2_xml"
-        android:layout_width="450dp"
-        android:layout_height="300dp"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
         android:background="@android:color/transparent"
         android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.69"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.6"
         app:lottie_autoPlay="true"
         app:lottie_fileName="animation-w800-h800.json"
         app:lottie_loop="true" />
@@ -43,8 +41,8 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/av3_xml"
-        android:layout_width="450dp"
-        android:layout_height="300dp"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
         android:background="@android:color/transparent"
         android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,42 +50,25 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.702"
+        app:layout_constraintVertical_bias="0.559"
         app:lottie_autoPlay="true"
         app:lottie_fileName="animation-w600-h600.json"
         app:lottie_loop="true" />
 
-
     <TextView
-        android:id="@+id/describeDayTextView"
+        android:id="@+id/feel_textview"
         android:layout_width="wrap_content"
-        android:layout_height="41dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/allerta"
-        android:text="@string/dayDescription_describe_your_day_text"
-        android:textColor="@color/darkerBlue"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.247"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.028" />
-
-    <TextView
-        android:id="@+id/productiveTextView"
-        android:layout_width="@dimen/oval_dim"
-        android:layout_height="@dimen/oval_dim"
-        android:layout_marginStart="408dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="@string/dayDescription_leftTop"
+        android:text="@string/feel_choose_mood_text"
         android:textColor="@color/darkerBlue"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.879"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,69 +76,55 @@
         android:id="@+id/excitingTextView"
         android:layout_width="@dimen/oval_dim"
         android:layout_height="@dimen/oval_dim"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="@string/dayDescription_rightTop"
+        android:text="@string/feel_choose_mood_leftTop_text"
         android:textColor="@color/darkerBlue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/productiveTextView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/unpleasantextView"
-        android:layout_width="@dimen/oval_dim"
-        android:layout_height="@dimen/oval_dim"
-        android:layout_marginStart="408dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/oval"
-        android:fontFamily="@font/allerta"
-        android:gravity="center"
-        android:text="@string/dayDescription_leftMid"
-        android:textColor="@color/darkerBlue"
+        app:layout_constraintHorizontal_bias="0.596"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productiveTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/feel_textview" />
 
     <TextView
-        android:id="@+id/unfortunateTextView"
+        android:id="@+id/badFeelTextView"
         android:layout_width="@dimen/oval_dim"
         android:layout_height="@dimen/oval_dim"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="384dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/oval"
-        android:fontFamily="@font/allerta"
-        android:gravity="center"
-        android:text="@string/dayDescription_rightMid"
-        android:textColor="@color/darkerBlue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/unpleasantextView"
-        app:layout_constraintTop_toBottomOf="@+id/excitingTextView" />
-
-    <TextView
-        android:id="@+id/delightfulTextView"
-        android:layout_width="@dimen/oval_dim"
-        android:layout_height="@dimen/oval_dim"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="44dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="@string/dayDescription_rightBottom"
+        android:text="@string/feel_choose_mood_leftBottom_text"
         android:textColor="@color/darkerBlue"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/unfortunateTextView"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/excitingTextView"
+        app:layout_constraintVertical_bias="0.043" />
 
     <TextView
-        android:id="@+id/lazyTextView"
+        android:id="@+id/okatTextview"
+        android:layout_width="@dimen/oval_dim"
+        android:layout_height="@dimen/oval_dim"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/oval"
+        android:fontFamily="@font/allerta"
+        android:gravity="center"
+        android:text="@string/feel_choose_mood_rightTop_text"
+        android:textColor="@color/darkerBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintStart_toEndOf="@+id/excitingTextView"
+        app:layout_constraintTop_toBottomOf="@+id/feel_textview" />
+
+    <TextView
+        android:id="@+id/terribleTextview"
         android:layout_width="@dimen/oval_dim"
         android:layout_height="@dimen/oval_dim"
         android:layout_marginStart="8dp"
@@ -167,14 +134,13 @@
         android:background="@drawable/oval"
         android:fontFamily="@font/allerta"
         android:gravity="center"
-        android:text="@string/dayDescription_leftBottom"
+        android:text="@string/feel_choose_mood_rightBottom_text"
         android:textColor="@color/darkerBlue"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/delightfulTextView"
-        app:layout_constraintHorizontal_bias="0.902"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/unpleasantextView"
-        app:layout_constraintVertical_bias="0.619" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintStart_toEndOf="@+id/badFeelTextView"
+        app:layout_constraintTop_toBottomOf="@+id/okatTextview"
+        app:layout_constraintVertical_bias="0.29" />
 
 </android.support.constraint.ConstraintLayout>
