--- a/app/src/main/res/layout/fragment_reoccurring_behavior.xml
+++ b/app/src/main/res/layout/fragment_reoccurring_behavior.xml
@@ -17,7 +17,8 @@
         android:fontFamily="@font/allerta"
         android:gravity="center"
         android:textColor="@color/darkerBlue"
-        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
