--- a/app/src/main/res/layout-land/fragment_feel.xml
+++ b/app/src/main/res/layout-land/fragment_feel.xml
@@ -107,7 +107,7 @@
         app:layout_constraintVertical_bias="0.043" />
 
     <TextView
-        android:id="@+id/okatTextview"
+        android:id="@+id/mood_Textview"
         android:layout_width="@dimen/oval_dim"
         android:layout_height="@dimen/oval_dim"
         android:layout_marginStart="8dp"
@@ -140,7 +140,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toEndOf="@+id/badFeelTextView"
-        app:layout_constraintTop_toBottomOf="@+id/okatTextview"
+        app:layout_constraintTop_toBottomOf="@+id/mood_Textview"
         app:layout_constraintVertical_bias="0.29" />
 
 </android.support.constraint.ConstraintLayout>
