--- a/app/src/main/res/layout-land/fragment_initial.xml
+++ b/app/src/main/res/layout-land/fragment_initial.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -102,4 +102,4 @@
         <!--app:layout_constraintHorizontal_bias="0.469"-->
         <!--app:layout_constraintStart_toStartOf="parent" />-->
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
